sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:13: error: Int does not take parameters
      		if(plusPetit(i+ecart,i)){echange(i,i+ecart);echange=echange+1;}
                                                ^